tests/negative/type_index_int.uzpp
// XATOLIK_KUTILMOQDA: cpp_level: butun qiymatni indeks bilan o'qib bo'lmaydi
ulash "uzpp_runtime.hpp"
butun asosiy() {
    butun x = 5;
    butun y = x[0];
    yozish << y << qator_oxiri;
    qaytarish 0;
}
